--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fontsource/poppins": "^5.2.5",
     "@tailwindcss/vite": "^4.1.4",
     "framer-motion": "^12.7.4",
+    "init": "^0.1.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
